--- a/packages/frontend/src/app/components/language-selector/language-selector.component.scss
+++ b/packages/frontend/src/app/components/language-selector/language-selector.component.scss
@@ -7,6 +7,10 @@
     &:hover {
       color: var(--text-color);
     }
+
+    .icon-arrow {
+      transition: transform 200ms;
+    }
   }
 
   &__dropdown {
@@ -25,6 +29,10 @@
 
       a {
         @apply block py-[15px];
+
+        &:hover {
+          color: var(--text-color);
+        }
       }
     }
   }
