--- a/packages/frontend/src/app/components/place-info/place-info.component.scss
+++ b/packages/frontend/src/app/components/place-info/place-info.component.scss
@@ -3,6 +3,7 @@
   height: calc(100vh - 80px);
   background-color: #fff;
   overflow-y: scroll;
+  overflow-x: hidden;
 
   .place-info__read-more {
     @apply inline-block px-[32px] py-[10px] mt-[10px] text-white rounded-full select-none;
