--- a/packages/frontend/src/styles.scss
+++ b/packages/frontend/src/styles.scss
@@ -49,8 +49,6 @@ button:focus {
 }
 
 .icon-arrow {
-  transition: transform 200ms;
-
   &.top-arrow {
     transform: rotate(-90deg);
   }
